# colab-gsoc2018-ArsalanAkhter

./: README.md
NavigationAmazonWarehouse/: MyAlgorithm.py  README.md  purePursuit.py  result_demo.ppm  ui_gui.py
NavigationAmazonWarehouse/gui/: teleTaxigui.ui
NavigationAmazonWarehouse/sensors/: destiny.txt
NavigationOmpl/: MyAlgorithm.py  NavigationOmpl.py  README.md  map_image.ppm  purePursuit.py  resources_rc.py  result_demo.ppm  taxiMap.conf  teleTaxi_conf.yml
NavigationOmpl/gui/: GUI.py  mapWidget.py  teleTaxigui.ui  ui_gui.py
NavigationOmpl/ompl_solution/: Point2DPlanning.py
NavigationOmpl/sensors/: destiny.txt  grid.py  sensor.py  threadSensor.py
NavigationOmplControllerIssue/: MyAlgorithm.py  purePursuit.py  result_demo.ppm
NavigationOmplControllerIssue/gui/: ui_gui.py
NavigationOmplControllerIssue/sensors/: destiny.txt  grid.py
amazon_robot_odom_demo/: CMakeLists.txt  package.xml
amazon_robot_odom_demo/launch/: amazon_robot_odom_demo.launch
amazon_robot_odom_demo/src/: amazon_robot_odom_demo.cpp
amazon_robot_teleop/: CMakeLists.txt  README.md  amazon_robot_teleop.py  package.xml
basicTeleop/: basicTeleop.launch
docs/: amazonwarehousedilation.m
gazeboo/models/amazon_warehouse_robot/: model.sdf
